# vllm-insights

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-sync.yml  weekly-summary.yml
docs/: index.html
docs/reports/: 2026-05-20.md  index.md
docs/weekly/: 2026-W21.md  2026-W22.md  latest.md
src/vllm_insights/: app.py  build_site.py  capability.py  cli.py  config.py  db.py  feed.py  github.py  hero.py  models.py  registry_sync.py  release_notes.py  report.py  source_scan.py  summarize.py  ui.py
src/vllm_insights/analysis/: __init__.py  benchmarks.py  embeddings.py  history.py  perf_claims.py  pr_issue_links.py  release_diff.py  social.py  topics.py
src/vllm_insights/analyzer/: linking.py  queries.py
src/vllm_insights/fetcher/: commits.py  forks.py  issues.py  pr_reactions.py  prs.py  releases.py
